1. Collection API Улучшения[#84994]