@@ -14,7 +14,7 @@ public class ConvertMatrix2ListTest {
                 {1, 2},
                 {3, 4}
         };
-        List<Integer> expect = Arrays.asList(
+        List<Integer> expect = List.of(
                 1, 2, 3, 4
         );
         List<Integer> result = list.toList(input);
@@ -28,7 +28,7 @@ public class ConvertMatrix2ListTest {
                 {4, 5, 6},
                 {7, 0, 0}
         };
-        List<Integer> expect = Arrays.asList(
+        List<Integer> expect = List.of(
                 1, 2, 3, 4, 5, 6, 7, 0, 0
         );
         List<Integer> result = list.toList(input);
